src/main/java/com/example/stream/spring/courses/reactive/example/model/error/ClassroomSuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface ClassroomSuccess extends Success permits ClassroomDeleteOk {
}
